[package]
name = "stamp-wasm"
version = "0.1.0"
authors = ["NailLegProcessorDivide <53022692+NailLegProcessorDivide@users.noreply.github.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"